[gd_scene load_steps=6 format=3 uid="uid://m2qisqs2fsqr"]

[ext_resource type="Script" uid="uid://d0nm1wi2012in" path="res://script/healthbar.gd" id="1_8wl12"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vjxg4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ulkio"]
bg_color = Color(0.29974034, 0.6887586, 0.48607254, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8nn8"]
bg_color = Color(0.18717611, 0.18717617, 0.18717602, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27450982)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_25yk6"]
bg_color = Color(1, 1, 1, 1)

[node name="healthbar" type="ProgressBar"]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -912.0
offset_bottom = -644.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_vjxg4")
theme_override_styles/fill = SubResource("StyleBoxFlat_ulkio")
value = 60.0
show_percentage = false
script = ExtResource("1_8wl12")

[node name="damagebar" type="ProgressBar" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_y8nn8")
theme_override_styles/fill = SubResource("StyleBoxFlat_25yk6")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
